# peclet-dem

./: .gitignore  CITATION.cff  CMakeLists.txt  HANDOFF_periodic_collisions.md  PLAN.md  README.md  activate_env.sh  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_revert.txt  build_log_velocity_fix_2.txt  convergence_output.txt  debug_two_particles.py  debug_vtp.py  diag_cube_stick_slip.py  diag_incline_roll.py  generate_particles.py  implementation_report.md  pack.py  pack_meter.py  packing_density_0.45.vtp  phase0_sphere_repro.py  phase1_protocol_spheres.py  phase2_protocol_fixed.py  plan_SDF_field.md  plan_overall.md  plan_periodic.md  plan_phase_2.md  plan_physics.md  pyproject.toml  requirements.txt  stacking_test.vtp  test.vtp  test_bounce.py  test_bounce_gravity.py  test_colored_gs.py  test_cone_friction.py  test_hertz.py  test_hertz_shapes.py  (+17 more)
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
doc/: kokkos_mpi_demstep_plan.md
docs/: Doxyfile  packing_investigation.md  solver_details.md  tests.md  velocity_solver_algorithm.md  visualization.md
kokkos_module/: CMakeLists.txt  binding.cpp  smoke.py  verify_get_sdf_grid.py  verify_packing_hollow_cylinders.py  verify_periodicity.py  verify_precession.py  verify_settling.py  verify_thermostat.py
mpi/: CMakeLists.txt  README.md  bench_step.py  driver_distributed.py  multi_gpu_testing.md  test_dem_scheme_b.cpp  test_dem_scheme_c.cpp  test_dem_step.cpp  test_device_halo.cu  test_particle_migration.cpp  validate_exact.py  validate_periodic.py  verify_distributed.py  verify_rotating_drum_mpi.py
notebooks/: packing_analysis.ipynb  packing_analysis_out.ipynb
output/: particles_0000.vtp  particles_0010.vtp  particles_0020.vtp  particles_0030.vtp  particles_0040.vtp  particles_0050.vtp  particles_0060.vtp  particles_0070.vtp  particles_0080.vtp  particles_0090.vtp
packaging/: dem_init.py  particle_builder.py
python/: export_vtp.py  run_packing.py  simulation_script.py  visualizer.py
python/shapes/: gen_hollow_cylinder.py
src/: broadphase_arborx.hpp  contact_preprocessing.hpp  dem_bindings.cpp  dem_portable.hpp  demgpu_bindings.cpp  engine_binding.cpp  integration.hpp  io.hpp  main_binding.cpp  mpi_halo.hpp  narrowphase.hpp  output_sdf.hpp  particles.hpp  periodicity.hpp  shapes_portable.hpp  sim.hpp  simulation.cpp  simulation.h  solver_friction.hpp  solver_hertz.hpp  solver_multilevel.hpp  solver_position.hpp  solver_velocity.hpp
src/cpp/: OutputGenerator.cpp  OutputGenerator.hpp
src/cuda/: ParticleSystem.cuh  broadphase.cpp  broadphase.cu  broadphase_arborx.hpp  bvh_adapter.cu  collision.cu  contact_preprocessing.cu  contact_preprocessing.hpp  contact_preprocessing_kokkos.hpp  dem_portable.hpp  integration.cu  integration_kokkos.hpp  io.hpp  io_kokkos.hpp  math_utils.cuh  memory_utils.cuh  mpi_halo_kokkos.hpp  narrowphase.cu  narrowphase.hpp  narrowphase_kokkos.hpp  output_sdf.cu  output_sdf.hpp  output_sdf_kokkos.hpp  particles_kokkos.hpp  periodicity.cu  periodicity.cuh  periodicity_kokkos.hpp  sdf_wrapper.cu  sdf_wrapper.h  shapes_portable.hpp  sim.hpp  sim_kokkos.hpp  solver.cu  solver_friction.hpp  solver_friction_kokkos.hpp  solver_position.cu  solver_position.hpp  solver_position_kokkos.hpp  solver_velocity.cu  solver_velocity.hpp  (+2 more)
src/cuda/shapes/: sdf_analytic.cuh  sdf_cylinder.cuh
src/io/: Exporter.cpp  Exporter.h
src/mpi/: communicator.cpp  device_particle_halo.cu  device_particle_halo.cuh  domain.cpp  mpi_halo.h
src/shapes/: ShapeManager.cpp  ShapeManager.hpp  point_sampler.cpp  point_sampler.h  sdf_generator.cpp
tests/: convergence_test.py  debug_2_particles.py  debug_crash.py  debug_fundamental.py  generate_dense_packing.py  generate_packing_cylinders.py  generate_packing_sdf.py  generate_periodic_packing.py  inspect_vti.py  study_sphere_packing.py  test_hollow_cylinder_overlap.py  test_hollow_cylinder_overlap_2.py  test_periodicity_corner.cpp  test_physics.py  verify_cylinders.py  verify_flexible.py  verify_restitution.py  verify_rotating_drum.py  verify_sdf_cylinder.py  verify_sdf_cylinder_highres.py  verify_sdf_particle.py  verify_sdf_sphere.py  verify_spheres.py  verify_vti_periodic.py
tests/arborx/: CMakeLists.txt  test_broadphase_arborx.cpp  test_pipeline.cpp
tests/kokkos/: CMakeLists.txt  test_contact_preprocessing.cpp  test_integration.cpp  test_narrowphase.cpp  test_periodicity.cpp  test_solver_friction.cpp  test_solver_position.cpp  test_solver_velocity.cpp  test_thermostat.cpp
tests/kokkos_mpi/: CMakeLists.txt  test_demstep_mpi.cpp  test_migrate_mpi.cpp  test_rebalance_mpi.cpp
