# Python packaging for the `dem` (dem-gpu) XPBD DEM module.
#
# `pip install .` builds the Kokkos + ArborX extension via scikit-build-core and installs it as a
# top-level `dem` module. The Kokkos/ArborX prefix is NOT pulled from PyPI (it is GPU-arch / MPI-ABI /
# ROCm-version specific): point the build at a prefix you bootstrapped once with
# ../tools/bootstrap_deps.sh by exporting CMAKE_PREFIX_PATH. The backend (Serial / OpenMP / CUDA /
# HIP) is whatever that prefix was built for — that is how one source serves every environment.
#
#   # CPU / multicore (OpenMP) build:
#   CMAKE_PREFIX_PATH=/path/to/extern/install/host-openmp pip install .
#
#   # NVIDIA GPU (Snellius) — put nvcc on PATH first:
#   CMAKE_PREFIX_PATH=/path/to/extern/install/nvidia-cuda pip install .
#
#   # add the distributed (MPI) step:
#   CMAKE_PREFIX_PATH=... pip install . --config-settings=cmake.define.PECLET_DEM_MPI=ON
#
# See ../docs/DEPLOYMENT.md for the full environment matrix and HPC/container recipes.

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "peclet-dem"
version = "0.1.0"
description = "peclet.dem — performance-portable XPBD Discrete Element Method (Kokkos + ArborX)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Frank Peters", email = "e.a.j.f.peters@gmail.com" }]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/computational-chemical-engineering/peclet"
Documentation = "https://github.com/computational-chemical-engineering/peclet"
Source = "https://github.com/computational-chemical-engineering/peclet-dem"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.24"
# The C++ extension + peclet/dem/__init__.py are placed by the CMake install() rules (guarded by
# SKBUILD) into the peclet namespace; disable package auto-discovery so nothing else is added.
wheel.install-dir = "."
wheel.packages = []
sdist.include = ["src", "mpi", "packaging", "cmake", "CMakeLists.txt", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Self-contained redistributable CPU wheels (cibuildwheel). PECLET_VENDOR_DEPS=ON FetchContent-builds
# Kokkos (OpenMP+Serial) + ArborX + the transport-core headers, so the wheel needs no prefix and runs
# multicore on any x86-64 Linux. The distributed (MPI) step (PECLET_DEM_MPI) stays OFF in the wheel — MPI is a
# source (sdist) / container build. GPU/HIP likewise stay source/container.
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *_i686 pp*"
build-frontend = "build"
manylinux-x86_64-image = "manylinux_2_28"
test-command = "python -c \"import peclet.dem as d; assert hasattr(d,'Simulation'); print('peclet.dem', d.execution_space)\""

[tool.cibuildwheel.environment]
PECLET_VENDOR_DEPS = "ON"
